screenshots/page_audit_20260319/audit_log.txt
๏ปฟ  File "C:\Users\yangh\Documents\GitHub\xsdm\page_audit_script.py", line 137
    print(f"\n[FILES] สน๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ data-i18n ๏ฟฝ๏ฟฝฤฃ๏ฟฝ๏ฟฝ๏ฟฝฤผ๏ฟฝ ({len(templates_with_i18n)} ๏ฟฝ๏ฟฝ):"))
                                                                           ^
SyntaxError: unmatched ')'
